<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="ST_ConveyorStatus" Id="{f364eeaa-06a5-44a0-bc04-e2f19dcc0f36}">
    <Declaration><![CDATA[TYPE ST_ConveyorStatus :
	STRUCT
		isRunning	: BOOL;  // This varriable will be True when the conveyor is running and False when it is not running
	END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>